--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.47.12",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "front-matter": "^4.0.2",
     "openai": "^4.78.1",
     "pdf-parse": "^1.1.1",
