--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PORT=port_no
 SUPABASE_PROJECT_URL=your_supabase_project_url
 SUPABASE_PROJECT_KEY=your_supabase_project_key
 SUPABASE_DB_FUNCTION_NAME=your_supabase_db_function_name
+SUPABASE_DB_TABLE=your_supabase_db_table
