--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node src/server.js",
+    "process-embeddings": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
